# search

./: .clippy.toml  .gitattributes  .gitignore  .gitsetup  .ignore  Cargo.toml  Justfile  build.rs  criterion.toml  deny.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.config/: spellcheck.toml
.githooks/: pre-commit  pre-push
.spelling/: dictionary.dic
assets/: TileSet_V2.tsx  game_of_life_tiles.xcf  map.ldtk  maze_0.tmx  sources.org
benches/: calliper_first_benchmark.rs  compare_maze2d.rs  sample_astar_maze2d.rs  sample_compare_maze2d.rs  trace_compare_maze2d.rs
data/problems/Maze2D/: two-paths.xcf
docs/: heaps.org  search.org  type_report.org
examples/: animation.rs  game_of_life.rs  ldtk.rs
fuzz/: Cargo.toml
src/: astar.rs  cost.rs  debug.rs  derank.rs  dijkstra.rs  float_cost.rs  heap_index.rs  heap_primitives.rs  heuristic_search.rs  lib.rs  maze_2d.rs  problem.rs  search.rs  space.rs
src/algorithms/: astar.rs  dijkstra.rs  mod.rs
src/data_structures/: intrusive_heap.rs  mod.rs
src/problems/: maze_2d.rs  mod.rs  osm.rs
src/renderer/: ldtk.rs  mod.rs
src/renderer/helpers/: camera.rs
src/renderer/plugins/: animation.rs  mod.rs  version.rs
