[package]
name = "search"
version = "0.1.0"
edition = "2024"
authors = [
		"Dietrich Daroch <Dietrich@Daroch.me>"
]
default-run = "main"
build = "build.rs"
resolver = "3"


[features]
# Allows inspecting data structure internals
inspect = []
# Verifies invariants whenever they may be broken (slow)
verify = []
# Uses DHAT to profile memory
mem_profile = ["dep:dhat"]
# Add coz support
coz_profile = ["dep:coz"]
# Add support for reverse search
partial_reverse = []
renderer = ["dep:bevy", "dep:bevy_args", "dep:bevy_ecs_tilemap", "dep:bevy_pancam", "dep:ldtk_rust", "dep:serde", "dep:serde_json"]

[package.metadata.spellcheck]
config = ".config/spellcheck.toml"

# Profiles
# ========
# https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles

# Dev
# https://doc.rust-lang.org/cargo/reference/profiles.html#profile-settings
[profile.dev]
debug-assertions = true
overflow-checks = true
panic = "unwind"
strip=false
split-debuginfo='packed'
# Use release profile for dependencies
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false
strip=true

# Release
# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
debug-assertions = false
overflow-checks = false
strip=true
panic = "abort"
# Use release profile for dependencies
[profile.release.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false
strip=true

[profile.bench]
inherits = "release"
debug = true
strip=false
# Use release profile for dependencies
[profile.bench.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false
strip=true


# Dependencies
# ============
[dependencies]
anstream = "0.6.18"
bevy = { version = "0.16.0", optional = true, features = ["wayland"] }
bevy_args = { version = "1.8.0", optional = true }
bevy_ecs_tilemap = { version = "0.16.0", optional = true }
bevy_pancam = { version = "0.18.0", optional = true }
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
colorchoice-clap = "1.0.6"
coz = { version = "0.1.3", optional = true }
criterion = "0.5"
derive_more = { version = "2.0.1", features = ["display"] }
dhat = { version = "0.3.3", optional = true }
glob = "0.3.2"
hrsw = "0.1.2"
human-duration = "0.1.0"
image = "0.25.6"
indoc = "2.0.6"
itertools = "0.14.0"
ldtk_rust = { git = "https://github.com/Dietr1ch/ldtk_rust", rev = "32ff0e0", optional = true }
log = "0.4.27"
nonmax = "0.5.5"
num-traits = "0.2.19"
owo-colors = "4.2.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rustc-hash = { version = "2.1.1", features = ["nightly"] }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
shadow-rs = { version = "1.1.1", features = ["metadata"] }
size = "0.5.0"
smallvec = { version = "1.15.0", features = ["const_new"] }
thiserror = "2.0.12"
thousands = "0.2.0"
typed-arena = "2.0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["stats"] }

[build-dependencies]
shadow-rs = "1.1.1"

[dev-dependencies]
calliper = "0.1.4"
criterion = { version = "0.5", features = ["html_reports"] }
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }


# Targets
# =======

# Binaries
[[bin]]
name = "main"  # ./src/bin/main.rs

[[bin]]
name = "report"  # ./src/bin/report.rs
required-features = ["inspect"]

# Sampling benchmarks
## criterion
[[bench]]
name = "sample_astar_maze2d"  # ./benches/sample_astar_maze2d.rs
harness = false

[[bench]]
name = "sample_compare_maze2d"  # ./benches/sample_compare_maze2d.rs
harness = false

# Tracing benchmarks
## iai
[[bench]]
name = "trace_compare_maze2d"  # ./benches/trace_compare_maze2d.rs
harness = false
## calliper
[[bench]]
name = "calliper_first_benchmark"  # ./benches/calliper_first_benchmark.rs
harness = false
